--- a/independence_cup_2025.html
+++ b/independence_cup_2025.html
@@ -3,29 +3,33 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Football Auctioneer - Home</title>
+  <title>Football Auctioneer - Independence Cup 2025</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     body {
       font-family: 'Inter', system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial;
-      background: white;
+      background: #f9fafb;
       color: #1e293b;
     }
 
-    	.nav-link {
-  	  color: #4b5563; /* Tailwind gray-700 */
-  	  font-weight: 500; /* font-medium */
-  	  text-decoration: none;
-  	  transition: color 0.2s ease;
-  	}
-  
-  	.nav-link:hover {
-  	  color: #374151; /* Tailwind gray-800 */
-  	}
-  
-  	.nav-link.active {
-  	  color: #dc2626; /* Tailwind red-600 */
-  	}
+    .nav-link {
+      color: #4b5563;
+      font-weight: 500;
+      text-decoration: none;
+      transition: color 0.2s ease;
+    }
+
+    .nav-link:hover {
+      color: #374151;
+    }
+
+    .nav-link.active {
+      color: #dc2626;
+    }
+
+    h2.section-title {
+      @apply text-xl font-semibold text-red-600 border-b pb-1 mb-3;
+    }
   </style>
 </head>
 <body class="text-black">
@@ -37,20 +41,23 @@
   <main class="container mx-auto px-4 md:px-0 py-10 grid grid-cols-1 md:grid-cols-3 gap-10">
 
     <!-- Main content -->
-    <section class="md:col-span-2 bg-white rounded-2xl shadow p-6">
-      <h1 class="text-3xl font-bold mb-6">Independence Cup 2025</h1>
-      <div class="mb-6 space-y-4">
-        <p><strong>📅 Event Date</strong><br>24 August 2025</p>
-        <p><strong>📍 Venue</strong><br><a href="https://maps.app.goo.gl/1aMXNvbHJBS5QxwT7" target="_blank" rel="noopener noreferrer" class="text-red-600 hover:underline">Turf XL</a></p>
-        <p><strong>⏰ Time</strong><br>9:00 AM – 6:00 PM</p>
-        <p><strong>👥 Organizers</strong><br>Debayan, Gourav &amp; Jyotishka</p>
-        <p><strong>👥 Teams</strong><br>Thunderbolt, Red Bulls Eleven, Messiah FC, White Panthers, Strawhat Pirates, Amingos FC</p>
-        <p><strong>👥 Captains</strong><br>Subhojit, Ritam, Monty, Subhamoy, Shubanjan, Akash Jr</p>
-        <p><strong>⚽ Number of Teams</strong><br>6</p>
+    <section class="md:col-span-2 bg-white rounded-2xl shadow p-8">
+      <h1 class="text-3xl font-extrabold mb-6 text-gray-900">🏆 Independence Cup 2025</h1>
+
+      <!-- Event Details -->
+      <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 mb-8 text-sm text-slate-700">
+        <p><strong>📅 Event Date:</strong><br>24 August 2025</p>
+        <p><strong>📍 Venue:</strong><br><a href="https://maps.app.goo.gl/1aMXNvbHJBS5QxwT7" target="_blank" class="text-red-600 hover:underline">Turf XL</a></p>
+        <p><strong>⏰ Time:</strong><br>9:00 AM – 6:00 PM</p>
+        <p><strong>👥 Organizers:</strong><br>Debayan, Gourav &amp; Jyotishka</p>
+        <p><strong>👥 Captains:</strong><br>Subhojit, Ritam, Monty, Subhamoy, Shubanjan &amp; Akash Jr</p>
+        <p><strong>⚽ Number of Teams:</strong><br>6</p>
       </div>
 
-      <h2 class="text-xl font-semibold mb-4">🏆 Independence Cup 2025 – Tournament Guidelines 🏆</h2>
+      <!-- Guidelines -->
+      <h2 class="section-title">Tournament Guidelines</h2>
       <article class="space-y-6 text-slate-700 leading-relaxed text-sm">
+        
         <section>
           <h3 class="font-semibold mb-1">Event Overview</h3>
           <ul class="list-disc list-inside space-y-1">
@@ -58,13 +65,116 @@
             <li>An opportunity to enjoy competitive play, sportsmanship, and camaraderie.</li>
           </ul>
         </section>
-        <section>
-          <h3 class="font-semibold mb-1">Rules & Regulations</h3>
+
+        <section class="bg-red-50 border-l-4 border-red-500 p-4 rounded">
+          <h3 class="font-semibold mb-1 text-red-700">Important Notice</h3>
           <ul class="list-disc list-inside space-y-1">
-            <li>Matches will be played in league-cum-knockout format.</li>
-            <li>Each half will be 8 minutes with a 3 min halftime break.</li>
-            <li>Fair play, discipline, and respect for referees are mandatory.</li>
+            <li>Organizers will not be liable for injuries, property loss, or incidents.</li>
+            <li>Teams must carry their own medical kits and individual water bottles.</li>
           </ul>
+        </section>
+
+        <section>
+          <h3 class="font-semibold mb-1">Field & Equipment</h3>
+          <ul class="list-disc list-inside space-y-1">
+            <li>Field Size: 70 x 110 ft, clearly marked boundaries.</li>
+            <li>Ball: Regulation Size 5 football.</li>
+          </ul>
+        </section>
+
+        <section>
+          <h3 class="font-semibold mb-1">Team Composition</h3>
+          <ul class="list-disc list-inside space-y-1">
+            <li>Minimum 7 players (including 1 goalkeeper).</li>
+            <li>Maximum 1 substitute allowed.</li>
+            <li>Players may represent only one team.</li>
+            <li>Maximum 6 players on the field at once; rolling substitutions.</li>
+          </ul>
+        </section>
+
+        <section>
+          <h3 class="font-semibold mb-1">Attire & Equipment</h3>
+          <ul class="list-disc list-inside space-y-1">
+            <li>Teams must wear identical or similar-colored jerseys (pre-assigned, no changes).</li>
+            <li>Footwear: Spikes or joggers only.</li>
+            <li>No sharp accessories; nails must be trimmed.</li>
+          </ul>
+        </section>
+
+        <section>
+          <h3 class="font-semibold mb-1">Match Format</h3>
+          <ul class="list-disc list-inside space-y-1">
+            <li>Match Duration: 16 minutes (8 per half) + 2 min half-time.</li>
+            <li>Final duration will be announced at venue.</li>
+            <li>Each player must play at least 15 minutes in group stage.</li>
+            <li>Strict timing; no postponements.</li>
+            <li>Teams with fewer than 6 players must play short.</li>
+          </ul>
+        </section>
+
+        <section>
+          <h3 class="font-semibold mb-1">Competition Structure</h3>
+          <ul class="list-disc list-inside space-y-1">
+            <li>2 groups of 3 teams each.</li>
+            <li>Round-robin format (2 matches per pairing).</li>
+            <li>Points: Win – 3, Draw – 1.</li>
+            <li>Tie-breakers: Goal Difference → Goals Scored → Coin Toss.</li>
+            <li>Knockouts: Semi-finals, 3rd place match, and Final.</li>
+          </ul>
+        </section>
+
+        <section>
+          <h3 class="font-semibold mb-1">Kick-off & Restarts</h3>
+          <ul class="list-disc list-inside space-y-1">
+            <li>Coin toss decides ends and first kick-off.</li>
+            <li>After goals, restart from center spot by opponents.</li>
+          </ul>
+        </section>
+
+        <section>
+          <h3 class="font-semibold mb-1">Fouls & Misconduct</h3>
+          <ul class="list-disc list-inside space-y-1">
+            <li>2 yellows in one match → Red card for that match.</li>
+            <li>2 yellows across matches → 12-min ban in next match.</li>
+            <li>3 yellows in tournament → Ban from next match.</li>
+            <li>Direct red → Ban current + next match.</li>
+            <li>Referee’s decision is final.</li>
+            <li>Violent conduct may lead to disqualification.</li>
+          </ul>
+        </section>
+
+        <section>
+          <h3 class="font-semibold mb-1">Free Kicks, Corners & Throw-ins</h3>
+          <ul class="list-disc list-inside space-y-1">
+            <li>Referee decides direct/indirect free kicks.</li>
+            <li>Indirect must touch another player.</li>
+            <li>1m minimum distance for free kicks.</li>
+            <li>Standard corner and throw-in rules apply.</li>
+          </ul>
+        </section>
+
+        <section>
+          <h3 class="font-semibold mb-1">Tie-breakers (Knockout Stage)</h3>
+          <ul class="list-disc list-inside space-y-1">
+            <li>3 penalty kicks per team.</li>
+            <li>If tied → Sudden death penalties (2 rounds).</li>
+            <li>If still tied → Goal Difference → Goals Scored → Coin Toss.</li>
+          </ul>
+        </section>
+
+        <section>
+          <h3 class="font-semibold mb-1">Awards & Recognition</h3>
+          <ul class="list-disc list-inside space-y-1">
+            <li>🏆 Winner: Trophy + Gold Medals</li>
+            <li>🥈 Runner-up: Trophy + Silver Medals</li>
+            <li>🥉 Third Place: Bronze Medals</li>
+            <li>🎯 Individual Awards: Top Goal Scorer, Best Goalkeeper, Playmaker, Best Defender, Man of the Match</li>
+          </ul>
+        </section>
+
+        <section>
+          <h3 class="font-semibold mb-1">Closing Ceremony</h3>
+          <p>Award distribution begins post 5:00 PM.</p>
         </section>
       </article>
     </section>
@@ -88,12 +198,10 @@
     <p>© 2025 Football Community. All Rights Reserved.</p>
   </footer>
 
-<script type="module">
+  <script type="module">
     import { injectHeader } from "./tournament_header.js";
     import { loadTeams, hydrateTeamLogos } from "./teams-util.js";
-    // Header
     injectHeader("#site-header", { active: "tournaments" });
-    // Team/logo hydration (keeps names/logos consistent from data/teams.json)
     try {
       const maps = await loadTeams();
       hydrateTeamLogos(document, maps);
@@ -103,7 +211,3 @@
   </script>
 </body>
 </html>
-
-
-
-
