--- a/admin.html
+++ b/admin.html
@@ -356,7 +356,7 @@
           if (email.toLowerCase() === ADMIN_EMAIL && password === ADMIN_PASSWORD) {
             btnText.textContent = "Access Granted!";
             setTimeout(() => {
-              window.location.href = "football_auctioneer.html";
+              window.location.href = "admin_fixture.html";
             }, 1000);
           } else {
             setLoading(false);
