--- a/admin.html
+++ b/admin.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>About Us - We Are Eleven</title>
+  <title>Admin - We Are Eleven</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <head>
   <meta charset="UTF-8" />
