--- a/independence_cup_2025.html
+++ b/independence_cup_2025.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Football Auctioneer - Independence Cup 2025</title>
+  <title>We Are Eleven - Independence Cup 2025</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     body {
