--- a/scoreboard.html
+++ b/scoreboard.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Live Tournament Scoreboard</title>
+  <title>Live Tournament Scoreboard - We Are Eleven</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     html, body { background: #0b1220; }
