--- a/tournament.html
+++ b/tournament.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Tournaments</title>
+  <title>Tournaments - We Are Eleven</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     body {
@@ -250,5 +250,6 @@
   </script>
 </body>
 </html>
+
 
 
