--- a/admin.html
+++ b/admin.html
@@ -112,8 +112,9 @@
     </div>
   </footer>
 
+  <!-- Scripts -->
   <script>
-    // Mobile menu (guard elements)
+    // Mobile menu toggle (guard elements so code doesn't throw)
     const mobileMenuBtn = document.getElementById("mobile-menu-button");
     const mobileMenu = document.getElementById("mobile-menu");
     if (mobileMenuBtn && mobileMenu) {
@@ -130,72 +131,89 @@
       });
     }
 
-    // Login logic
-    (() => {
+    // Admin login logic (no syntax pitfalls)
+    (function () {
       const form = document.getElementById("loginForm");
       const errorMsg = document.getElementById("errorMsg");
       const loginBtn = document.getElementById("loginBtn");
       const btnText = document.getElementById("btnText");
 
+      // Prevent navigation even if handler fails elsewhere
+      if (form) form.setAttribute("onsubmit", "return false;");
+
       const ADMIN_EMAIL = "jyotishka27@org.com";
       const ADMIN_PASSWORD = "Leavemealoner8@";
 
-      function showError(msg){ errorMsg.textContent = msg; errorMsg.classList.add("show"); setTimeout(() => errorMsg.classList.remove("show"), 5000); }
-      function clearError(){ errorMsg.classList.remove("show"); }
-      function setLoading(v){ if(v){ loginBtn.classList.add("loading"); btnText.style.opacity="0"; loginBtn.disabled=true; } else { loginBtn.classList.remove("loading"); btnText.style.opacity="1"; loginBtn.disabled=false; } }
+      function showError(message) {
+        errorMsg.textContent = message;
+        errorMsg.classList.add("show");
+        setTimeout(() => errorMsg.classList.remove("show"), 5000);
+      }
+      function clearError() { errorMsg.classList.remove("show"); }
+      function setLoading(v) {
+        if (v) { loginBtn.classList.add("loading"); btnText.style.opacity = "0"; loginBtn.disabled = true; }
+        else   { loginBtn.classList.remove("loading"); btnText.style.opacity = "1"; loginBtn.disabled = false; }
+      }
 
-      form.addEventListener("submit", (e) => {
-        e.preventDefault();
-        clearError();
-        const email = (form.email.value || "").trim();
-        const password = form.password.value || "";
+      if (form) {
+        form.addEventListener("submit", function (e) {
+          e.preventDefault();
+          clearError();
 
-        if(!email || !password) return showError("Please enter both email and password.");
-        if(!email.includes("@")) return showError("Please enter a valid email address.");
+          const email = (form.email.value || "").trim();
+          const password = form.password.value || "";
 
-        setLoading(true);
-        setTimeout(() => {
-          const ok = (email.toLowerCase() === ADMIN_EMAIL.toLowerCase()) && (password === ADMIN_PASSWORD);
-          if(ok){
-            btnText.textContent = "Access Granted!";
-            setTimeout(() => { window.location.href = "admin_fixture.html"; }, 800);
-          } else {
-            setLoading(false);
-            btnText.textContent = "Access Admin Panel";
-            showError("Invalid credentials. Access denied.");
-            form.style.animation = "shake 0.5s ease-in-out";
-            setTimeout(() => { form.style.animation = ""; }, 500);
-          }
-        }, 500);
-      });
+          if (!email || !password) return showError("Please enter both email and password.");
+          if (!email.includes("@")) return showError("Please enter a valid email address.");
 
-      document.querySelectorAll(".form-input").forEach(i => i.addEventListener("focus", clearError));
+          setLoading(true);
+          setTimeout(function () {
+            const ok = (email.toLowerCase() === ADMIN_EMAIL.toLowerCase()) && (password === ADMIN_PASSWORD);
+            if (ok) {
+              btnText.textContent = "Access Granted!";
+              setTimeout(function () {
+                window.location.href = "admin_fixture.html"; // redirect target
+              }, 800);
+            } else {
+              setLoading(false);
+              btnText.textContent = "Access Admin Panel";
+              showError("Invalid credentials. Access denied.");
+              form.style.animation = "shake 0.5s ease-in-out";
+              setTimeout(function () { form.style.animation = ""; }, 500);
+            }
+          }, 500);
+        });
 
-      // Shake keyframes
-      const style = document.createElement("style");
+        // Dismiss error on focus
+        document.querySelectorAll(".form-input").forEach(function (i) {
+          i.addEventListener("focus", clearError);
+        });
+      }
+
+      // Inject shake keyframes once
+      var style = document.createElement("style");
       style.textContent = "@keyframes shake{0%,100%{transform:translateX(0)}25%{transform:translateX(-5px)}75%{transform:translateX(5px)}}";
       document.head.appendChild(style);
 
       // Entry animation
-      window.addEventListener("DOMContentLoaded", () => {
-        const card = document.querySelector(".login-card");
-        if(card){
-          card.style.opacity = "0";
-          card.style.transform = "translateY(20px) scale(0.95)";
-          setTimeout(() => {
-            card.style.transition = "all 0.6s ease";
-            card.style.opacity = "1";
-            card.style.transform = "translateY(0) scale(1)";
-          }, 100);
-        }
+      window.addEventListener("DOMContentLoaded", function () {
+        var card = document.querySelector(".login-card");
+        if (!card) return;
+        card.style.opacity = "0";
+        card.style.transform = "translateY(20px) scale(0.95)";
+        setTimeout(function () {
+          card.style.transition = "all 0.6s ease";
+          card.style.opacity = "1";
+          card.style.transform = "translateY(0) scale(1)";
+        }, 100);
       });
     })();
   </script>
 
-  <!-- Optional header injection (disabled teams load to avoid 404 noise) -->
+  <!-- Header injection (teams load disabled to avoid 404 noise) -->
   <script type="module">
     import { injectHeader } from "./header.js";
-    // import { loadTeams, hydrateTeamLogos } from "./teams-util.js"; // disabled (404)
+    // import { loadTeams, hydrateTeamLogos } from "./teams-util.js"; // re-enable when data/teams.json exists
 
     (async () => {
       injectHeader("#site-header", { active: "admin" });
@@ -207,5 +225,6 @@
       // }
     })();
   </script>
+
 </body>
 </html>
